// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`boolean-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

while (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

do {} while (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if ( // comment
Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if (Boolean // comment
(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if (Boolean?.
(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));


=====================================output=====================================
if (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference",
));

while (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference",
));

do {} while (Boolean(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference",
));

if (
  // comment
  Boolean(
    node.type === "ImportExpression" ||
    node.type === "TSImportType" ||
    node.type === "TSExternalModuleReference",
  )
);

if (Boolean(
  // comment
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference",
));

if (
  Boolean?.(
    node.type === "ImportExpression" ||
      node.type === "TSImportType" ||
      node.type === "TSExternalModuleReference",
  )
);

================================================================================
`;

exports[`unary-expression.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
if (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

while (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

do {} while (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));


if (!!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if(typeof (
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));


if ( // comment
!!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if (! // comment
!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

if (!! // comment
(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"));

=====================================output=====================================
if (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

while (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

do {} while (!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

if (!!(
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

if (typeof (
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

if (
  // comment
  !!(
    node.type === "ImportExpression" ||
    node.type === "TSImportType" ||
    node.type === "TSExternalModuleReference"
  )
);

if (!(
  // comment
  !(
    node.type === "ImportExpression" ||
    node.type === "TSImportType" ||
    node.type === "TSExternalModuleReference"
  )
));

if (!!(
  // comment
  node.type === "ImportExpression" ||
  node.type === "TSImportType" ||
  node.type === "TSExternalModuleReference"
));

================================================================================
`;
